// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Footer /> > displays "Limit reached" message when remaining is 0 1`] = `
" mode (Shift+Tab)   workspace (/directory)                                      sandbox      /model              /stats
 manual             ~/project/foo/bar/and/some/more/directories/to/make/it/lo   no sandbox   gemini-pro   limit reached
"
`;

exports[`<Footer /> > displays the usage indicator when usage is low 1`] = `
" mode (Shift+Tab)    workspace (/directory)                                          sandbox       /model        /stats
 manual              ~/project/foo/bar/and/some/more/directories/to/make/it/long     no sandbox    gemini-pro       85%
"
`;

exports[`<Footer /> > footer configuration filtering (golden snapshots) > renders complete footer in narrow terminal (baseline narrow) > complete-footer-narrow 1`] = `
" mode (Shift+Tab)   workspace (/directory)         sandbox      /model
 manual             ...rectories/to/make/it/long   no sandbox   gemini-pro   …
"
`;

exports[`<Footer /> > footer configuration filtering (golden snapshots) > renders complete footer with all sections visible (baseline) > complete-footer-wide 1`] = `
" mode (Shift+Tab)    workspace (/directory)                                         sandbox      /model         context
 manual              ~/project/foo/bar/and/some/more/directories/to/make/it/long    no sandbox   gemini-pro    14% used
"
`;

exports[`<Footer /> > footer configuration filtering (golden snapshots) > renders footer with CWD and model info hidden to test alignment (only sandbox visible) > footer-only-sandbox 1`] = `
" mode (Shift+Tab)                                                                                               sandbox
 manual                                                                                                      no sandbox
"
`;

exports[`<Footer /> > footer configuration filtering (golden snapshots) > renders footer with all optional sections hidden (minimal footer) > footer-minimal 1`] = `
" mode (Shift+Tab)
 manual
"
`;

exports[`<Footer /> > footer configuration filtering (golden snapshots) > renders footer with only model info hidden (partial filtering) > footer-no-model 1`] = `
" mode (Shift+Tab)                 workspace (/directory)                                                        sandbox
 manual                           ~/project/foo/bar/and/some/more/directories/to/make/it/long                no sandbox
"
`;

exports[`<Footer /> > hides the usage indicator when usage is not near limit 1`] = `
" mode (Shift+Tab)    workspace (/directory)                                          sandbox       /model        /stats
 manual              ~/project/foo/bar/and/some/more/directories/to/make/it/long     no sandbox    gemini-pro       15%
"
`;
